--- a/FirstSecurityApp/src/main/resources/templates/auth/registration.html
+++ b/FirstSecurityApp/src/main/resources/templates/auth/registration.html
@@ -15,7 +15,7 @@
     <div style="color:red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{yearOfBirth}">Age error</div>
     <br/>
     <label for="password">Введите пороль: </label>
-    <input type="text" th:field="*{password}" id="password"/>
+    <input type="password" th:field="*{password}" id="password"/>
     <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</div>
     <br/>
     <input type="submit" value="Sign up"/>
