--- a/FirstSecurityApp/src/main/resources/templates/auth/login.html
+++ b/FirstSecurityApp/src/main/resources/templates/auth/login.html
@@ -5,6 +5,11 @@
     <title>Страница логин</title>
 </head>
 <body>
+<a href="/auth/registration">Регистрация</a>
+<br/>
+<a>Или</a>
+<br/>
+<a>Выполнить вход.</a>
 <form name="f" method="POST" action="/process_login">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     <label for="username">Введите имя пользователя: </label>
