--- a/FirstSecurityApp/src/main/resources/templates/hello.html
+++ b/FirstSecurityApp/src/main/resources/templates/hello.html
@@ -2,9 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Привет</title>
 </head>
 <body>
+<a href="/admin">Нажми если есть права администратора</a>
+<br/>
 Hello world
 <form th:action="@{/logout}" th:method="POST">
     <input type="submit" value="Logout" />
